# supervoxel

./: CMakeLists.txt  README.md  pyproject.toml
src/: CMakeLists.txt  supervoxel_pybind.cpp
supervoxel/: __init__.py
