[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "supervoxel"
version = "0.1.0"
description = "Python wrapper for header-only C++ supervoxel segmentation"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Supervoxel contributors" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
wheel.packages = ["supervoxel"]

[tool.scikit-build.cmake.define]
CMAKE_CXX_STANDARD = "11"
CMAKE_CXX_STANDARD_REQUIRED = "ON"
